--- a/before-optimization.html
+++ b/before-optimization.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body><center>
+    <h1> ДЕНЬ 1: Анализ и метрики производительности</h1>
 <table border="1">
 <thead>
 <tr>
@@ -42,6 +43,23 @@
 </tr>
 </tbody>
 </table>
+<h3> После оптимизации </h3>
+<img src="proizvod.PNG"/>
+<img src="proizvod2.PNG"/>
+<h1> ДЕНЬ 2: Оптимизация изображений</h1>
+  <h3> Перевод в WEBP изображений</h3>
+<img src="convertimg.PNG" width="40%">
+<img src="convertimg2.PNG" width="40%">
+<br>
+<img src="1.PNG" width="40%">
+<h3>Пример созданных изображений WEBP</h3>
+<img src="4.PNG" width="40%">
+ <h3> Прописыване ALT для изображений</h3>
+<img src="2.PNG" width="40%">
+<h3> Добавление meta-описания title и main</h3>
+<img src="33.PNG" width="40%">
+<h3>Перевод кода на flex</h3>
+<img src="5.PNG" width="40%">
 </center>
 </body>
 </html>
